# closet

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  database.py  docker-compose.dev.yml  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  start.sh
data/: closet.db
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ImageGallery.tsx  ImageUpload.tsx  OutfitsGallery.tsx
frontend/src/utils/: api.ts
